force-app/main/default/objects/Wins_Losses__c/Wins_Losses__c.object-meta.xml
<CustomObject>
    <description>Object to Capture Wins and Losses on an Account.  Will be Related Object on account.  Used in the custom VF Leadership Report</description>
    <label>Wins / Losses</label>
    <nameField>
        <displayFormat>WL-{00000}</displayFormat>
        <label>Wins / Losses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wins / Losses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>