force-app/main/default/objects/Wins_Losses__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Wins / Losses</relationshipLabel>
    <relationshipName>Wins_Losses</relationshipName>
    <type>Lookup</type>
</CustomField>