force-app/main/default/objects/Wins_Losses__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>@Road</fullName>
            </value>
            <value>
                <fullName>Actia</fullName>
            </value>
            <value>
                <fullName>Aeris</fullName>
            </value>
            <value>
                <fullName>AirIQ</fullName>
            </value>
            <value>
                <fullName>Alda Digital</fullName>
            </value>
            <value>
                <fullName>AMA</fullName>
            </value>
            <value>
                <fullName>Anasat</fullName>
            </value>
            <value>
                <fullName>Astrum Satelital</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Axeda</fullName>
            </value>
            <value>
                <fullName>Blue Tree Systems</fullName>
            </value>
            <value>
                <fullName>Cadec</fullName>
            </value>
            <value>
                <fullName>CarrierWeb</fullName>
            </value>
            <value>
                <fullName>Central de Alarmas</fullName>
            </value>
            <value>
                <fullName>Cevsa</fullName>
            </value>
            <value>
                <fullName>Comtech Mobile Datacom</fullName>
            </value>
            <value>
                <fullName>ControlTrack</fullName>
            </value>
            <value>
                <fullName>CoolTrax</fullName>
            </value>
            <value>
                <fullName>Copiloto Satelital Mexicano Sa De Cv</fullName>
            </value>
            <value>
                <fullName>Crossbridge</fullName>
            </value>
            <value>
                <fullName>Danin Pricol</fullName>
            </value>
            <value>
                <fullName>Discrete Wireless</fullName>
            </value>
            <value>
                <fullName>DriveCam</fullName>
            </value>
            <value>
                <fullName>Driver Tech</fullName>
            </value>
            <value>
                <fullName>Encontrak</fullName>
            </value>
            <value>
                <fullName>Esprida</fullName>
            </value>
            <value>
                <fullName>Fleet Management Solutions</fullName>
            </value>
            <value>
                <fullName>Fleetmatics</fullName>
            </value>
            <value>
                <fullName>Ful-Mar</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>