force-app/main/default/objects/Wins_Losses__c/fields/Win_Loss_Date__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_Date__c</fullName>
    <label>Win/Loss Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>