force-app/main/default/objects/Wins_Losses__c/validationRules/Competitor_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Competitor_Needed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(Loss_Reason__c , &quot;Competitor&quot;),
ISPICKVAL(Type__c , &quot;Takeaway&quot;)
),
ISPICKVAL(Competitor__c,&quot;&quot; )
)</errorConditionFormula>
    <errorMessage>Please Enter a Competitor</errorMessage>
</ValidationRule>