force-app/main/default/objects/Wins_Losses__c/validationRules/Loss_Reason_Needed_for_Loss.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_Reason_Needed_for_Loss</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Type__c, &quot;Loss&quot;),
ISPICKVAL(Loss_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Loss Reason must be entered when Type = Loss</errorMessage>
</ValidationRule>